@@ -49,7 +49,7 @@ SOURCES += dvttextfile.cpp
 SOURCES += dvtuser.cpp
 SOURCES += login.cpp
 SOURCES += spread_cell.cpp
-SOURCES += spread_object.cpp
+SOURCES += spread.cpp
 SOURCES += spread_sheet.cpp
 SOURCES += spread_tab.cpp
 SOURCES += statecombobox.cpp
@@ -81,7 +81,7 @@ HEADERS += dvttextfile.h
 HEADERS += dvtuser.h
 HEADERS += login.h
 HEADERS += spread_cell.h
-HEADERS += spread_object.h
+HEADERS += spread.h
 HEADERS += spread_sheet.h
 HEADERS += spread_tab.h
 HEADERS += statecombobox.h
